<resources>
    <string name="app_name">Займы ЦФТ</string>
    <string name="error_400">Пользователь с таким логином существует</string>
    <string name="error_403">Доступ запрещен, попробуйте еще раз</string>
    <string name="error_404">Пользователь не найден, проверьте логин и пароль</string>
    <string name="error_504">Сервер не отвечает, попробуйте еще раз</string>
    <string name="error_401">Пользователь не авторизован</string>
    <string name="error_email">Введите настоящую электронную почту!</string>
    <string name="error_password">Введите пароль, больше 6 знаков!</string>
    <string name="error_no_internet">Нет соединения с интернетом</string>
    <string name="error_server_not_response">Сервер не отвечает, попробуйте позже</string>
    <string name="success">Успешно</string>
    <string name="symbol_rur">₽</string>
    <string name="add_loan">Оформить займ</string>
    <string name="label_percent">Процентная ставка:</string>
    <string name="symbol_percent">%</string>
    <string name="label_period">Период:</string>
    <string name="symbol_days">дн.</string>
    <string name="label_understand">Понятно!</string>
    <string name="fill_all_fields">Заполните все поля!</string>
    <string name="no_loans_yet">Займов еще нет.</string>
    <string name="registered_loan_detail_info">Ваша заявка зарегистрирована. Дождитесь изменения статуса заявки для дальнейших действий.</string>
    <string name="approved_loan_detail_info">Поздравляем!      \nВаша заявка была одобрена! Получить деньги можно в пункте выдачи.</string>
    <string name="rejected_loan__detail_info">К сожалению, заявка была отклонена. Попробуйте оформить новую.</string>
    <string name="hint_email">Электронная почта</string>
    <string name="hint_password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="entry">Вход</string>
    <string name="greetings_success_loan_create_first">Поздравляем!</string>
    <string name="greetings_success_loan_create_second">Заявка на займ оформлена успешно.</string>
    <string name="explain_success_loan_create_first">Теперь необходимо дождаться изменения статуса по заявке.</string>
    <string name="explain_success_loan_create_second">*Проверить статус можно выбрав заявку из списка на начальном экране</string>
    <string name="loan_information">Информация по займу</string>
    <string name="recipient">Получатель:</string>
    <string name="phone">Номер телефона:</string>
    <string name="loan_amount">Сумма займа:</string>
    <string name="loan_date">Дата заявки:</string>
    <string name="loan_period">Срок займа</string>
    <string name="loan_percent">Ставка:</string>
    <string name="last_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="approved">ОДОБРЕНА</string>
    <string name="registered">ЗАРЕГИСТРИРОВАНА</string>
    <string name="rejected">ОТКЛОНЕНА</string>
</resources>